--- a/vignettes/articles/ml_responses.Rmd
+++ b/vignettes/articles/ml_responses.Rmd
@@ -15,9 +15,11 @@ library(multilex)
 
 The function `ml_responses` function retrieves participants' responses to the questionnaire using the formr API, and joins the responses to participant- and item-level information. This function returns a tidy data frame in which each row is one participant's response to an individual item. By default, this function updates all data. You can avoid waiting for data to be updated by setting the argument `update = FALSE`, so that the last version of the data is retrieved. This will retrieve data as it was the last time `ml_responses` was ran with `update = TRUE`.
 
-```r
+```{r responses, echo=TRUE, message=FALSE, warning=FALSE, paged.print=FALSE}
+
 ml_responses()               # this will update data
 ml_responses(update = FALSE) # this will retrieve data from last update 
+
 ```
 
 ## Longitudinal responses
@@ -34,8 +36,10 @@ By default, `ml_responses` retrieves all responses. This behaviour can be change
 
 Setting `longitudinal = "only"` is especially useful to perform repeated measures analyses. For example:
 
-```r
+```{r responses_longitudinal, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
+
 ml_responses(longitudinal = "only") # retrieve only longitudinal responses
+
 ```
 
 ### Please note
