--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # multilex <img src='man/figures/logo.png' align="right" height="139" />
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/gongcastro/multilex/workflows/R-CMD-check/badge.svg)](https://github.com/gongcastro/multilex/actions)
 <!-- badges: end -->
 
 ## multilex: **Multi**lingual **lex**ical assessment using online surveys
