--- a/vignettes/ml_vocabulary.Rmd
+++ b/vignettes/ml_vocabulary.Rmd
@@ -4,7 +4,8 @@ output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Vocabulary sizes: ml_vocabulary}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}---
+  %\VignetteEncoding{UTF-8}
+---
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
@@ -13,9 +14,17 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup}
-knitr::opts_chunk$set(warning = FALSE, message = FALSE)
+
+```{r login, message=FALSE, warning=FALSE, include=FALSE, paged.print=FALSE}
 library(multilex)
+my_email <- "gonzalo.garciadecastro@upf.edu"
+ml_connect(formr_password = Sys.getenv("ML_PWD"))
+```
+
+```r
+library(multilex)
+my_email <- "gonzalo.garciadecastro@upf.edu"
+ml_connect(formr_password = keyring::key_get("multilex", my_email))
 ```
 
 The `ml_vocabulary` function allows to extract vocabulary sizes for individual responses to any of the questionnaires:
