--- a/vignettes/ml_norms.Rmd
+++ b/vignettes/ml_norms.Rmd
@@ -34,7 +34,7 @@ First we log in:
 ```{r login, message=FALSE, warning=FALSE, include=FALSE, paged.print=FALSE}
 library(multilex)
 my_email <- "gonzalo.garciadecastro@upf.edu"
-ml_connect(formr_password = Sys.getenv("ML_PWD"))
+ml_connect(google_email = my_email, formr_password = Sys.getenv("ML_PWD"))
 ```
 
 ```{r norms_get}
