--- a/vignettes/ml_vocabulary.Rmd
+++ b/vignettes/ml_vocabulary.Rmd
@@ -8,21 +8,23 @@ vignette: >
 ---
 
 ```{r, include = FALSE}
+NOT_CRAN <- identical(tolower(Sys.getenv("NOT_CRAN")), "true")
+
 knitr::opts_chunk$set(
+  purl = NOT_CRAN,
   collapse = TRUE,
   comment = "#>"
+)
+
+keyring::key_set_with_value(
+  "multilex",
+  "gonzalo.garciadecastro@upf.edu", 
+  Sys.getenv("ML_KEY")
 )
 ```
 
 
-```{r login, message=FALSE, warning=FALSE, include=FALSE, paged.print=FALSE}
-library(multilex)
-my_email <- "gonzalo.garciadecastro@upf.edu"
-ml_connect(google_email = my_email)
-keyring::key_set_with_value("multilex", my_email, password = Sys.getenv("ML_PWD"))
-```
-
-```r
+```{r login, echo=TRUE, message=FALSE, warning=FALSE, paged.print=FALSE}
 library(multilex)
 my_email <- "gonzalo.garciadecastro@upf.edu"
 ml_connect(google_email = my_email)
